@@ -2,6 +2,7 @@ cm4all-beng-proxy (0.7.32) unstable; urgency=low
 
   * response: generate the "Server" response header
   * response: support the Authentication-Info response header
+  * response: support custom authentication pages
 
  --
 
